// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostArticle > Snapshots > matches snapshot with cover image 1`] = `
<div>
  <div
    class="justify-between gap-6 lg:flex-row"
    data-testid="container"
  >
    <div
      class="gap-y-1"
      data-testid="container"
    >
      <span
        class="wrap-anywhere"
        data-size="lg"
        data-testid="typography"
      >
        Test Article Title
      </span>
      <div
        class="text-muted-foreground"
        data-has-link-click="true"
        data-is-article="true"
        data-testid="post-text"
      >
        This is the article body content.
      </div>
    </div>
    <img
      alt="Cover Image"
      class="h-25 w-45 rounded-md object-cover object-center"
      data-testid="cover-image"
      height="100"
      src="https://example.com/cover-image.jpg"
      width="180"
    />
  </div>
  <div
    data-link-url=""
    data-open="false"
    data-testid="dialog-check-link"
  >
    <button
      data-testid="dialog-close"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`PostArticle > Snapshots > matches snapshot with custom className 1`] = `
<div>
  <div
    class="justify-between gap-6 lg:flex-row custom-article-class"
    data-testid="container"
  >
    <div
      class="gap-y-1"
      data-testid="container"
    >
      <span
        class="wrap-anywhere"
        data-size="lg"
        data-testid="typography"
      >
        Test Article Title
      </span>
      <div
        class="text-muted-foreground"
        data-has-link-click="true"
        data-is-article="true"
        data-testid="post-text"
      >
        This is the article body content.
      </div>
    </div>
    <img
      alt="Cover Image"
      class="h-25 w-45 rounded-md object-cover object-center"
      data-testid="cover-image"
      height="100"
      src="https://example.com/cover-image.jpg"
      width="180"
    />
  </div>
  <div
    data-link-url=""
    data-open="false"
    data-testid="dialog-check-link"
  >
    <button
      data-testid="dialog-close"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`PostArticle > Snapshots > matches snapshot with local cover image 1`] = `
<div>
  <div
    class="justify-between gap-6 lg:flex-row"
    data-testid="container"
  >
    <div
      class="gap-y-1"
      data-testid="container"
    >
      <span
        class="wrap-anywhere"
        data-size="lg"
        data-testid="typography"
      >
        Test Article Title
      </span>
      <div
        class="text-muted-foreground"
        data-has-link-click="true"
        data-is-article="true"
        data-testid="post-text"
      >
        This is the article body content.
      </div>
    </div>
    <img
      alt="Local Cover Image"
      class="h-25 w-45 rounded-md object-cover object-center"
      data-testid="cover-image"
      height="100"
      src="blob:http://localhost/local-cover-image"
      width="180"
    />
  </div>
  <div
    data-link-url=""
    data-open="false"
    data-testid="dialog-check-link"
  >
    <button
      data-testid="dialog-close"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`PostArticle > Snapshots > matches snapshot with local video attachment falling back to hook image 1`] = `
<div>
  <div
    class="justify-between gap-6 lg:flex-row"
    data-testid="container"
  >
    <div
      class="gap-y-1"
      data-testid="container"
    >
      <span
        class="wrap-anywhere"
        data-size="lg"
        data-testid="typography"
      >
        Test Article Title
      </span>
      <div
        class="text-muted-foreground"
        data-has-link-click="true"
        data-is-article="true"
        data-testid="post-text"
      >
        This is the article body content.
      </div>
    </div>
    <img
      alt="Cover Image"
      class="h-25 w-45 rounded-md object-cover object-center"
      data-testid="cover-image"
      height="100"
      src="https://example.com/cover-image.jpg"
      width="180"
    />
  </div>
  <div
    data-link-url=""
    data-open="false"
    data-testid="dialog-check-link"
  >
    <button
      data-testid="dialog-close"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`PostArticle > Snapshots > matches snapshot with long title and body 1`] = `
<div>
  <div
    class="justify-between gap-6 lg:flex-row"
    data-testid="container"
  >
    <div
      class="gap-y-1"
      data-testid="container"
    >
      <span
        class="wrap-anywhere"
        data-size="lg"
        data-testid="typography"
      >
        This is a very long article title that might wrap to multiple lines in the UI
      </span>
      <div
        class="text-muted-foreground"
        data-has-link-click="true"
        data-is-article="true"
        data-testid="post-text"
      >
        This is a much longer article body content that contains multiple sentences. It should properly handle long text content and display it correctly within the component boundaries.
      </div>
    </div>
    <img
      alt="Cover Image"
      class="h-25 w-45 rounded-md object-cover object-center"
      data-testid="cover-image"
      height="100"
      src="https://example.com/cover-image.jpg"
      width="180"
    />
  </div>
  <div
    data-link-url=""
    data-open="false"
    data-testid="dialog-check-link"
  >
    <button
      data-testid="dialog-close"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`PostArticle > Snapshots > matches snapshot without cover image 1`] = `
<div>
  <div
    class="justify-between gap-6 lg:flex-row"
    data-testid="container"
  >
    <div
      class="gap-y-1"
      data-testid="container"
    >
      <span
        class="wrap-anywhere"
        data-size="lg"
        data-testid="typography"
      >
        Test Article Title
      </span>
      <div
        class="text-muted-foreground"
        data-has-link-click="true"
        data-is-article="true"
        data-testid="post-text"
      >
        This is the article body content.
      </div>
    </div>
  </div>
  <div
    data-link-url=""
    data-open="false"
    data-testid="dialog-check-link"
  >
    <button
      data-testid="dialog-close"
    >
      Close
    </button>
  </div>
</div>
`;
